added a clickable interface

--- a/rockPaperCissors.html
+++ b/rockPaperCissors.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+
+    <title>rock paper scissors</title>
 </head>
 <body>
-    <script src="rockPaperCissors.js"></script>
+    <button>rock</button>
+    <button>paper</button>
+    <button>scissors</button>
+
+<div>et'jzrhae</div>
+
+
 </body>
+<script src="rockPaperCissors.js" >
+
+</script>
 </html>
